# libgpiod

./: .gitignore  Makefile.am  TODO  configure.ac
bindings/: Makefile.am
bindings/cxx/: chip.cpp  gpiod.hpp  line.cpp  line_bulk.cpp
bindings/cxx/examples/: .gitignore  Makefile.am  gpiowatchcxx.cpp
bindings/cxx/tests/: Makefile.am  tests-watch.cpp
bindings/glib/: Makefile.am  chip.c  error.c  event.c  gpiod-glib.h  gpiod-glib.pc.in  line.c  misc.c
bindings/glib/examples/: .gitignore  Makefile.am  gpiodetect-glib.c  gpiofind-glib.c  gpioget-glib.c  gpioinfo-glib.c  gpiomon-glib.c  gpioset-glib.c
bindings/glib/gpiod-glib/: Makefile.am  gpiod-glib-chip.h  gpiod-glib-error.h  gpiod-glib-event.h  gpiod-glib-line.h  gpiod-glib-misc.h
dbus/: .gitignore  Makefile.am  chip.c  daemon.c  gpio-dbus.c  gpio-dbus.h  line.c
dbus/data/: Makefile.am  org.gpiod1.conf  org.gpiod1.xml
dbus/examples/: Makefile.am  gpiodetect-dbus.py  gpiofind-dbus.py  gpioinfo-dbus.py
include/: gpiod.h
lib/: core.c  helpers.c
man/: Makefile.am
tests/: Makefile.am  gpiod-test.c  tests-watch.c
tools/: .gitignore  Makefile.am  gpio-tools-test.bats  gpiofind.c  gpioget.c  gpioset.c  gpiowatch.c  tools-common.c  tools-common.h
