# SPDX-License-Identifier: LGPL-2.1-or-later

#
# This file is part of libgpiod.
#
# Copyright (C) 2019 Bartosz Golaszewski <bgolaszewski@baylibre.com>
#

otherincludedir = $(includedir)/gpiod-glib
otherinclude_HEADERS =			\
		gpiod-glib-chip.h	\
		gpiod-glib-error.h	\
		gpiod-glib-event.h	\
		gpiod-glib-line.h	\
		gpiod-glib-misc.h
